--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,20 @@
 				</configuration>
 			</plugin>
 
-
+  
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.3.0.RELEASE</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+      
 		</plugins>
 		<pluginManagement>
 			<plugins>
@@ -538,6 +551,11 @@
 			<version>1.1.159</version>
 		</dependency>
 
+       	<dependency>
+			<groupId>com.netflix.archaius</groupId>
+			<artifactId>archaius-core</artifactId>
+			<version>0.6.5</version>
+		</dependency>
 	
 		<dependency>
 			<groupId>org.slf4j</groupId>
