Added ssl support

--- a/src/main/resources/META-INF/spring/trouble.properties
+++ b/src/main/resources/META-INF/spring/trouble.properties
@@ -11,3 +11,6 @@ trouble.token=abc123
 
 ###Trouble Service name, defaults to trouble.maker
 #trouble.service.name = trouble.maker
+
+###use https when accessing client api
+trouble.ssl=false
