--- a/src/main/resources/META-INF/spring/trouble.properties
+++ b/src/main/resources/META-INF/spring/trouble.properties
@@ -6,11 +6,14 @@ trouble.cron=0 0 14 * * MON-FRI
 ### Access token that trouble maker client  
 trouble.token=abc123
 
+###Operation timeout in milliseconds, 0 means forever, default is 5 minutes
+trouble.timeout=300000
+
 ###Threads to spawn when Blocking trouble is invoked, default is 200
-###blocking.threads=200  
+blocking.threads=200  
 
 ###Trouble Service name, defaults to trouble.maker
-#trouble.service.name = trouble.maker
+trouble.service.name = trouble.maker
 
-###use https when accessing client api
+###use https when accessing client servlet api
 trouble.ssl=false
