update pom.xml dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -319,6 +319,7 @@
 		<dependency>
 			<groupId>com.keyholesoftware</groupId>
 			<artifactId>khs-trouble-maker-client</artifactId>
+			<version>1.0.1</version>
 		</dependency>
 
 
