--- a/Dockerfile.package
+++ b/Dockerfile.package
@@ -1,10 +1,10 @@
 FROM java:8
 
-ADD /tmp/app.jar /app.jar
+ADD /tmp/khs-trouble-maker.jar /khs-trouble-maker.jar
 
 # so that it has a file modification time (Docker creates all container files in an "unmodified" state by default)
-RUN bash -c 'touch /app.jar'
+RUN bash -c 'touch /khs-trouble-maker.jar'
 
 EXPOSE 8080
 
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/khs-trouble-maker.jar"]
