bootified the app

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,9 @@
-.idea/
-*.iml
-src/main/node/node_modules
+.springBeans
 .classpath
 .settings
 .project
-/build/
 /target/
-atlassian-ide-plugin.xml
 /src/main/webapp/*
 !/src/main/webapp/WEB-INF
 npm-debug.log*
-/src/main/node/node
-bin
 .DS_Store
-codeship.aes
-/tmp
-deployment*.env
