--- a/ng2-ui/package.json
+++ b/ng2-ui/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ng2-ui",
-  "version": "0.0.0",
+  "name": "trouble-maker-ui",
+  "version": "1.0.0",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
