added refresh interval property, and actuator

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,8 @@ trouble:
   ssl: false
   ###Threads to spawn when Blocking trouble is invoked, default is 200
   blocking-threads: 200  
+  ### Refresh interval for WebSocket clients
+  refreshInterval: 10000
   
 security:
   basic:
